merging r39168 from 4.4 branch: MAGNOLIA-3388 set environment variables via setenv.sh|.bat rather than magnolia_control.sh|.bat
git-svn-id: file:///home/dlipp/subversion-migration/svn-repo-copy/community/bundle/trunk@39171 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f